Functionality of settings works perfectly! Moving on to refactoring "inline" CSS in Controller and move to application.css

--- a/bin/application/SettingsGUI.fxml
+++ b/bin/application/SettingsGUI.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SettingsGUIController">
    <children>
       <GridPane layoutX="73.0" layoutY="138.0" prefHeight="400.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -27,7 +26,7 @@
         </rowConstraints>
          <children>
             <Label id="settingsLabel" text="Settings" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-            <CheckBox mnemonicParsing="false" selected="true" text="Order Matters?" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <CheckBox fx:id="orderMattersBox" mnemonicParsing="false" onAction="#toggleOrderMatters" selected="true" text="Order Matters?" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
